fix - text overlap issue, styles

--- a/capstone/static/css/scss/labs-chronolawgic/sidebar.scss
+++ b/capstone/static/css/scss/labs-chronolawgic/sidebar.scss
@@ -23,6 +23,8 @@
       padding: 0.5em;
       font-size: 0.7em;
       line-height: 1.5em;
+      margin-top: 1em;
+      text-align: left;
     }
   }
 
